--- a/index.html
+++ b/index.html
@@ -68,22 +68,35 @@
           <td style="padding:20px 0;">
           <![endif]-->
           <div class="outer" style="width:96%;max-width:660px;margin:20px auto;">
-            
+            <!--contentblock_hero-1_column-->
             <table role="presentation" style="width:100%;border:0;border-spacing:0;">
-              <tr>
-                <td style="padding:10px 10px 20px 10px;font-family:Arial,sans-serif;font-size:24px;line-height:28px;font-weight:bold;">
-                  <img src="images/header.png" width="640" alt="" style="width:100%;height:auto;" />
+               <tr>
+                <td style="padding:10px;text-align:left; color: #2D3134">
+                  <h1 style="margin-top:0;margin-bottom:16px;font-family:Arial,sans-serif;font-size:26px;line-height:32px;font-weight:bold;">7 notícias de economia que vão ajudar as suas finanças</h1>
                 </td>
               </tr>
               <tr>
-                <td style="padding:10px;text-align:left;">
-                  <h1 style="margin-top:0;margin-bottom:16px;font-family:Arial,sans-serif;font-size:26px;line-height:32px;font-weight:bold;">Creating responsive email magic</h1>
-                  <p style="margin:0;font-family:Arial,sans-serif;font-size:18px;line-height:24px;">Maecenas sed ante pellentesque, posuere leo id, eleifend dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent laoreet malesuada cursus!</p>
+                <td style="padding:10px 10px 20px 10px;font-family:Arial,sans-serif;font-size:24px;line-height:28px;font-weight:bold;">
+                  <img src="images/heroimage_16-9.png" width="640" alt="" style="width:100%;height:auto;" />
+                </td>
+              </tr>
+              <tr>
+                <td style="padding:10px;text-align:left; color: #2D3134;">
+                  <p style="margin:0;font-family:Arial,sans-serif;font-size:18px;line-height:24px;">A nova etapa do Desenrola Brasil já começou. A negociação de contas atrasadas de luz, água, varejo e educação, entre outras, é feita por meio da plataforma oficial do programa.</p>
+                </td>
+              </tr>
+                <tr>
+                <td style="padding:10px 10px 20px 10px;font-family:Arial,sans-serif;font-weight:bold;">
+                 <p style="margin:0;font-family:Arial,sans-serif;"><a href="https://example.com/" style="background: #218EE1; border: 0px solid #8dc1d6; text-decoration: none; padding: 10px 25px; color: #ffffff; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">leia mais</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
                 </td>
               </tr>
             </table>
+            <!--contentblock_hero-1_column-->
 
             <div class="spacer" style="line-height:26px;height:26px;mso-line-height-rule:exactly;">&nbsp;</div>
+
+
+            <!--contentblock-2_column-->
 
             <div class="two-col" style="text-align:center;font-size:0;">
               <!--[if mso]>
@@ -94,7 +107,7 @@
               <div class="column" style="width:100%;max-width:330px;display:inline-block;vertical-align:middle;">
                 <div style="padding:10px;">
                   <p style="margin:0;font-family:Arial,sans-serif;font-size:14px;line-height:18px;">
-                    <img src="images/two-column-01.png" width="310" alt="" style="display:block;width:310px;max-width:100%;height:auto;" />
+                    <img src="images/cardimage.png" width="229" alt="" style="display:block;width:310px;max-width:100%;height:auto;" />
                   </p>
                 </div>
               </div>
@@ -104,9 +117,8 @@
               <![endif]-->
               <div class="column" style="width:100%;max-width:330px;display:inline-block;vertical-align:middle;">
                 <div style="padding:10px;font-size:14px;line-height:18px;text-align:left;">
-                  <p style="margin-top:0;margin-bottom:12px;font-family:Arial,sans-serif;font-weight:bold;">Taciti nostra, per litora nostra</p>
-                  <p style="margin-top:0;margin-bottom:14px;font-family:Arial,sans-serif;">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sed ante pellentesque.</p>
-                  <p style="margin:0;font-family:Arial,sans-serif;"><a href="https://example.com/" style="background: #ffffff; border: 2px solid #8dc1d6; text-decoration: none; padding: 10px 25px; color: #000000; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">Claim yours now</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
+                  <p style="margin-top:0;margin-bottom:14px;font-family:Arial,sans-serif;">Planejar a aposentadoria é essencial para garantir conforto no futuro. Veja as melhores dicas para se preparar.</p>
+                  <p style="margin:0;font-family:Arial,sans-serif;"><a href="https://example.com/" style="background: #ffffff; border: 2px solid #218EE1; text-decoration: none; padding: 10px 25px; color: #218EE1; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">Leia mais</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
                 </div>
               </div>
               <!--[if mso]>
@@ -115,39 +127,11 @@
               </table>
               <![endif]-->
             </div>
+            <!--contentblock-2_column-->
 
             <div class="spacer" style="line-height:24px;height:24px;mso-line-height-rule:exactly;">&nbsp;</div>
 
-            <div class="two-col" style="text-align:center;font-size:0;direction:rtl;">
-              <!--[if mso]>
-              <table role="presentation" width="100%" dir="rtl">
-              <tr>
-              <td style="width:50%;padding:10px;" valign="middle" dir="ltr">
-              <![endif]-->
-              <div class="column" style="width:100%;max-width:330px;display:inline-block;vertical-align:middle;direction:ltr;">
-                <div style="padding:10px;font-size:14px;line-height:18px;">
-                  <p style="margin:0;font-family:Arial,sans-serif;">
-                    <img src="images/two-column-02.png" width="310" alt="" style="display:block;width:310px;max-width:100%;height:auto;" />
-                  </p>
-                </div>
-              </div>
-              <!--[if mso]>
-              </td>
-              <td style="width:50%;padding:10px;" valign="middle" dir="ltr">
-              <![endif]-->
-              <div class="column" style="width:100%;max-width:330px;display:inline-block;vertical-align:middle;direction:ltr;">
-                <div style="padding:10px;font-size:14px;line-height:18px;text-align:left;">
-                  <p style="margin-top:0;margin-bottom:12px;font-family:Arial,sans-serif;font-weight:bold;">Conubia nostra, per inceptos himenaeos</p>
-                  <p style="margin-top:0;margin-bottom:14px;font-family:Arial,sans-serif;">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sed ante pellentesque.</p>
-                  <p style="margin:0;font-family:Arial,sans-serif;"><a href="https://example.com/" style="background: #ffffff; border: 2px solid #8dc1d6; text-decoration: none; padding: 10px 25px; color: #000000; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ffffff"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">Lock it in</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
-                </div>
-              </div>
-              <!--[if mso]>
-              </td>
-              </tr>
-              </table>
-              <![endif]-->
-            </div>
+            
 
             <div class="spacer" style="line-height:24px;height:24px;mso-line-height-rule:exactly;">&nbsp;</div>
 
